--- a/Security_in_IoT.ipynb
+++ b/Security_in_IoT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "d78b6e79",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated Token: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxMjMsImV4cCI6MTcxNTU0MjE1Nn0.9ItPd6az3vm06_uDfwUwf6BqHulTqNlxxtdaDSKDxaw\n",
+      "Generated Token: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxMjMsImV4cCI6MTc0Mjk5MTgwNH0.ZnLtTJs6c4B7YpKEE-JncYB5wdV2nOWKd_8omMOR6f0\n",
       "Decoded User ID: 123\n"
      ]
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8dc9aa9c",
    "metadata": {},
    "outputs": [
@@ -58,10 +58,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your username: user1\n",
-      "Enter your password: password1\n",
+      "Enter your username: vikas Tyagi\n",
+      "Enter your password: 8527\n",
       "Authentication successful!\n",
-      "Generated Token: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoidXNlcjEiLCJleHAiOjE3MTU1NDMwMTR9.0YIo0lcPZQybautEyMk5KvlYwxzdfTiQ3T0p4y_TuIw\n"
+      "Generated Token: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoidmlrYXMgVHlhZ2kiLCJleHAiOjE3NDI5OTE5ODJ9.EGOnZKt8UN-8S-Xw5Iu66MZleJ4reZSP-qJCeVLjBn8\n"
      ]
     }
    ],
@@ -74,8 +74,8 @@
     "\n",
     "# Dummy user database\n",
     "user_database = {\n",
-    "    'user1': 'password1',\n",
-    "    'user2': 'password2',\n",
+    "    'vikas Tyagi': '8527',\n",
+    "    'Abhi Tyagi': '0612',\n",
     "    # Add more users as needed\n",
     "}\n",
     "\n",
@@ -135,10 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4ece76e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encrypted Data: Vsog/v13L6H4ZnFmVz8y/TOFrxOMaAAlehpYn6KG1iW4HSIIV41r4OqT+BYN\n",
+      "Decrypted Data: Hello, world!\n"
+     ]
+    }
+   ],
    "source": [
     "#encrypt data\n",
     "from Crypto.Cipher import AES\n",
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "dd859005",
    "metadata": {},
    "outputs": [
@@ -183,11 +192,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the data to encrypt: vikas\n",
-      "Enter the encryption key: 23\n",
-      "Encrypted Data: zRNyGzZx8SNb9WFP1KfFEjDulKOTtBN56Mx8cUorf/TNfvnAVw==\n",
-      "Enter the encryption key: 23\n",
-      "Decrypted Data: vikas\n"
+      "Enter the data to encrypt: this is secret mission\n",
+      "Enter the encryption key: oppscorrect\n",
+      "Encrypted Data: SD0aHMgdejY95GPWcsCJZhQyinyFsmQ59SnMXFz6qHYY6dq3u2itn2cg/bNFxOStMkiKeELW\n",
+      "Enter the encryption key: oppscorrect\n",
+      "Decrypted Data: this is secret mission\n"
      ]
     }
    ],
@@ -228,15 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6de36b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "0a1f8462",
    "metadata": {},
    "outputs": [
@@ -281,10 +282,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your username: user2\n",
-      "Enter your password: password2\n",
-      "Enter the action you want to perform (read/write): write\n",
-      "Permission granted. Performing action...\n"
+      "Enter your username: user1\n",
+      "Enter your password: password\n",
+      "Authentication failed.\n"
      ]
     }
    ],
@@ -323,14 +323,6 @@
     "    else:\n",
     "        print(\"Permission denied. You do not have the required permissions.\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "128c7ca5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
